fixed sidebar overlapping issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,10 +16,6 @@
   --transition: 250ms ease-in;
 }
 
-html {
-  zoom: 0.8;
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
