--- a/src/styles/modules/global/shared-layout.module.scss
+++ b/src/styles/modules/global/shared-layout.module.scss
@@ -5,6 +5,7 @@
   @include desktop {
     display: flex;
     justify-content: center;
+    margin-left: 270px;
   }
 }
 
